--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -38,10 +38,10 @@
         </div>
       </div>
 
-      <button type="submit" class="submit-button" [disabled]="isLoading">
-        <span class="material-icons" *ngIf="isLoading">hourglass_empty</span>
-        <span *ngIf="!isLoading">إرسال رابط إعادة التعيين</span>
-        <span *ngIf="isLoading">جاري الإرسال...</span>
+      <button type="submit" class="submit-button" [disabled]="loading">
+        <span class="material-icons" *ngIf="loading">hourglass_empty</span>
+        <span *ngIf="!loading">إرسال رابط إعادة التعيين</span>
+        <span *ngIf="loading">جاري الإرسال...</span>
       </button>
 
       <div class="back-to-login">
