--- a/src/app/pages/auth/reset-password/reset-password.component.html
+++ b/src/app/pages/auth/reset-password/reset-password.component.html
@@ -31,7 +31,7 @@
             placeholder="أدخل كلمة المرور الجديدة"
             [class.invalid]="password?.invalid && password?.touched"
           />
-          <button type="button" class="toggle-password" (click)="togglePasswordVisibility()">
+          <button type="button" class="toggle-password" (click)="togglePasswordVisibility('password')">
             <span class="material-icons">{{ passwordVisible ? 'visibility_off' : 'visibility' }}</span>
           </button>
         </div>
@@ -52,7 +52,7 @@
             placeholder="أعد إدخال كلمة المرور الجديدة"
             [class.invalid]="passwordConfirmation?.invalid && passwordConfirmation?.touched"
           />
-          <button type="button" class="toggle-password" (click)="toggleConfirmPasswordVisibility()">
+          <button type="button" class="toggle-password" (click)="togglePasswordVisibility('passwordConfirmation')">
             <span class="material-icons">{{ confirmPasswordVisible ? 'visibility_off' : 'visibility' }}</span>
           </button>
         </div>
@@ -62,10 +62,10 @@
         </div>
       </div>
 
-      <button type="submit" class="submit-button" [disabled]="isLoading || resetPasswordForm.invalid">
-        <span class="material-icons" *ngIf="isLoading">hourglass_empty</span>
-        <span *ngIf="!isLoading">إعادة تعيين كلمة المرور</span>
-        <span *ngIf="isLoading">جاري المعالجة...</span>
+      <button type="submit" class="submit-button" [disabled]="loading || resetPasswordForm.invalid">
+        <span class="material-icons" *ngIf="loading">hourglass_empty</span>
+        <span *ngIf="!loading">إعادة تعيين كلمة المرور</span>
+        <span *ngIf="loading">جاري المعالجة...</span>
       </button>
 
       <div class="back-to-login">
@@ -77,3 +77,4 @@
     </form>
   </div>
 </div>
+<!-- P@ssword123 -->
