--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -2,3 +2,8 @@
   <h1>صفحة الإعدادات</h1>
   <p>هذا مكان مؤقت لصفحة الإعدادات.</p>
 </div>
+<app-confirm-dialog
+  [title]="'تأكيد'"
+  [isOpen]="isConfirmDialogOpen"
+  [description]="'هل أنت متأكد من أنك تريد المتابعة؟'"
+  > 
